GetJavaProperties should free temporary memory if subsequent allocations fails

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 8
    • Affects Version/s: 8
    • Component/s: core-libs
    • b52
    • generic
    • generic
    • Verified

      6844255 introduced dynamic allocation sites, the memory for which is not freed if a subsequent allocation fails. This is fairly benign as the failure will cause VM termination anyway, but this cleanup will keep leak detectors happy.
      See discussion at:
      http://mail.openjdk.java.net/pipermail/core-libs-dev/2012-August/010984.html

            Assignee:
            Alan Bateman
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: