7189533: GetJavaProperties should free temporary file if subsequent allocations fails

Add missing calls to free

Reviewed-by: alanb, dholmes, sherman